lib_LIBRARIES = liblive_cells.a
pkginclude_HEADERS = boolean.hpp \
	cell_state.hpp \
	compute_cell.hpp \
	computed.hpp \
	compute_state.hpp \
	constant_cell.hpp \
	dependent_cell.hpp \
	dynamic_compute_cell.hpp \
	dynamic_mutable_compute_cell.hpp \
	equality.hpp \
	errors.hpp \
	exceptions.hpp \
	keys.hpp \
	make_cell.hpp \
	merged_observable.hpp \
	mutable_cell.hpp \
	mutable_cell_view.hpp \
	mutable_compute_cell_state.hpp \
	mutable_computed.hpp \
	numeric.hpp \
	observable.hpp \
	peek_cell.hpp \
	stateful_cell.hpp \
	static_mutable_compute_cell.hpp \
	store_cell.hpp \
	tracker.hpp \
	types.hpp \
	util.hpp \
	watcher.hpp \
	live_cells.hpp

liblive_cells_a_SOURCES = live_cells.cpp
